cmake_minimum_required(VERSION 3.5)

project(XBee)
add_definitions(-DPOSIX)
message( STATUS- "Compiling XBee Library")
file(GLOB SOURCES *.c)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../include/xbee)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
add_library(XBee SHARED ${SOURCES})
